# mdb_capitalisation_and_spending

./: README.md  pyproject.toml
output/: core_contributions_providers.csv  mdb_inflows.csv  mdb_outflows_by_flow.csv  mdb_outflows_summary.csv
scripts/: config.py  inflows.py  outflows.py
