[tool.poetry]
name = "scripts"
version = "0.1.0"
description = "Data on inflows and outflows to/from major MDBs"
authors = ["Jorge Rivera <jorge.rivera@one.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
oda-data = "^1.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
